# Django_19_2

./: pyproject.toml
app/catalog/: urls.py  views.py
app/catalog/templates/catalog/: base.html  contacts.html  home.html
config/: settings.py  urls.py
