[tool.poetry]
name = "19-2"
version = "0.1.0"
description = ""
authors = ["Nikkon97 <you@example.com>"]
readme = "README.md"
packages = [{include = "19"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
